banner alomost complete

--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
         <div class="banner-main">
             
         <div class="banner-1">
-            <div class="btn-1"><h2>Hot Recipies</h2></div>
+            <div class="banner-text">
+                <div class="btn-1"><i class="fa-regular fa-clipboard"></i><h2>Hot Recipies</h2>
+                 </div>       
+                    <div class="banner-text-1">
+                        <h1 class="banner-text-2">Spicy Delicious Chicken Wings</h1>
+                        <p class="banner-text-3">Spicy Delicious Chicken Wings are crispy, flavor-packed delights coated in a fiery, tangy sauce that tantalizes your taste buds. Perfect for parties or a savory snack, they deliver the ultimate kick of heat and zest!</p>
+                    </div>
+                    <div class="btn2all">
+                        <div class="btn-2"><i class="fa-solid fa-clock"></i>30 Minutes</div>
+                        <div class="btn-2"><i class="fa-solid fa-utensils"></i>Chicken</div>
+                    </div>
+                </div>
+            
         </div>
         <div class="banner-2">
 
