--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
                         <div class="btn-2"><i class="fa-solid fa-clock"></i>30 Minutes</div>
                         <div class="btn-2"><i class="fa-solid fa-utensils"></i>Chicken</div>
                     </div>
+                    <div>
+                        <div class="name">
+                            <img src="./img/Ellipse 2.png" alt="">
+                            <div class="sub-name">
+                                John Smith <br><span class="date">15 March 2022</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             
         </div>
