--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
                         <div class="btn-2"><i class="fa-solid fa-clock"></i>30 Minutes</div>
                         <div class="btn-2"><i class="fa-solid fa-utensils"></i>Chicken</div>
                     </div>
-                    <div>
+                    <div class="main-name">
                         <div class="name">
                             <img src="./img/Ellipse 2.png" alt="">
                             <div class="sub-name">
                                 John Smith <br><span class="date">15 March 2022</span>
                             </div>
+                        </div>
+                        <div class="btn-3">
+                            <a class="sub-btn-3" href="">View Recipes <i class="fa-solid fa-play"></i></a>
                         </div>
                     </div>
 
